--- a/style.css
+++ b/style.css
@@ -1,235 +1,695 @@
-/* Yakecan */
+@charset "UTF-8";
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-}
-.center {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    text-align: center;
-}
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-}
-header h1 {  
-    margin: 0;   
-    font-size: 2em;  
-    font-weight: bold;  
-    text-transform: uppercase;   
-    display: flex;  
-    justify-content: center;  
-    align-items: center;  
-}  
-nav {  
-    background-color: #333;   
-}  
-  
-nav ul {  
-    list-style-type: none;  
-    margin: 0;  
-    padding: 0;  
-    display: flex;   
-    justify-content: center;   
-}  
-  
-
-nav ul li {  
-    display: inline-flex; 
-    align-items: center; 
-    margin-right: 10px;  
-    position: relative;   
-}  
-  
-nav ul li:last-child {  
-    margin-right: 0;  
-}  
-  
- 
-nav ul li a {  
-    color: #fff;  
-    text-decoration: none;  
-    padding: 10px 15px;   
-    display: block;  
-    transition: all 0.3s ease;  
-    border-bottom: 3px solid transparent; 
-}  
-  
-  
-nav ul li a:hover {  
-    color: #f00; 
-    border-bottom-color: #f00; 
-}  
-  
- 
-nav ul li a::after {  
-    content: '';  
-    display: block;  
-    width: 0;  
-    height: 2px;  
-    background: #f00;  
-    transition: width 0.3s;  
-    position: absolute;  
-    bottom: 0;  
-    left: 50%;  
-    transform: translateX(-50%);  
-}  
-  
-nav ul li a:hover::after {  
-    width: 100%; 
-}  
-
-.page {
-    display: none;
-    padding: 20px;
+  font-size: 16px;
+  color: #000;
 }
 
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
+ul,
+li {
+  list-style: none;
+}
+
+a {
+  color: #000;
+  text-decoration: none;
 }
 
 
-.container, .cart {  
-    display: block; 
-}  
-  
+img {
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select,
+[role="button"] {
+  outline: 0;
+}
+
+.fl {
+  float: left;
+}
+
+.fr {
+  float: right;
+}
+
+
+.cl::after {
+  content: "";
+  clear: both;
+  display: block;
+  visibility: hidden;
+}
 
 .container {
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+  max-width: 1600px;
+  margin: 0 auto;
 }
-  
-.cart {  
-      
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #40dba8;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-}  
-  
+
+.commPadding {
+  padding: 40px 80px;
+}
+
+.commTitle {
+  text-align: center;
+  font-size: 24px;
+  line-height: 1.5;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.header {
+  padding: 15px 20px;
+  background-color: #fff;
+}
+
+.header .logo img {
+  height: 50px;
+}
+
+.header .menu {
+  margin-left: 20px;
+  margin-top: 15px;
+}
+
+.header .menu li {
+  float: left;
+}
+
+.header .menu li a {
+  display: block;
+  font-size: 18px;
+  padding: 5px 20px;
+}
+
+.header .menu li a.active {
+  color: #ed020e;
+}
+
+.header .right ul {
+  margin-top: 15px;
+}
+
+.header .right ul li {
+  float: left;
+}
+
+.header .right ul li a {
+  font-size: 18px;
+  padding: 5px 10px;
+}
+
+.header .right ul li a.active {
+  color: #ed020e;
+}
+
+
+.banner .swiper-pagination-bullet-active {
+  background-color: #ed020e;
+}
+
+.news {
+  background-color: #f1f2f3;
+}
+
+.Disney-news {
+  position: relative;
+}
+
+.Disney-news .swiper-pagination-bullet {
+  width: 6px;
+  height: 6px;
+  border-radius: 50px;
+  display: inline-block;
+  background: #1b1b1c;
+  opacity: .3;
+  margin: 0 10px !important;
+}
+
+.Disney-news .swiper-pagination-bullet-active {
+  opacity: 1;
+}
+
+.Disney-news .swiper-button-prev,
+.Disney-news .swiper-button-next {
+  top: 48%;
+  width: 44px;
+  height: 44px;
+  background: #fff;
+  border-radius: 100px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.16);
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 600;
+}
+
+.Disney-news .swiper-button-prev::after,
+.Disney-news .swiper-button-next::after {
+  font-size: 20px;
+}
+
+.Disney-news .swiper-button-prev {
+  left: -22px;
+}
+
+.Disney-news .swiper-button-next {
+  right: -22px;
+}
+
+.Disney-news .swiper-slide {
+  background: #fff;
+  margin-bottom: 50px;
+}
+
+.Disney-news .swiper-slide .img {
+  height: 200px;
+  overflow: hidden;
+}
+
+.Disney-news .swiper-slide .img img {
+  width: 100%;
+  height: 100%;
+}
+
+.Disney-news .swiper-slide .txt {
+  padding: 15px;
+}
+
+.Disney-news .swiper-slide .txt .tip,
+.Disney-news .swiper-slide .txt .time {
+  font-size: 14px;
+  line-height: 30px;
+  height: 30px;
+  color: rgba(0, 0, 0, 0.9);
+}
+
+.Disney-news .swiper-slide .tit {
+  font-size: 20px;
+  margin: 10px 0;
+  line-height: 32px;
+  height: 64px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  word-break: break-all;
+}
+
+.video {
+  background-color: #0A193C;
+}
+
+.video .commTitle {
+  color: #fff;
+}
+
+.video ul li {
+  position: relative;
+  float: left;
+  padding: 10px;
+  width: 50%;
+}
+
+.video ul li a {
+  display: block;
+  text-align: center;
+}
+
+.video ul li .img {
+  margin: 0 0 20px;
+  display: block;
+  width: 100%;
+  padding-top: 56.44%;
+  overflow: hidden;
+  position: relative;
+}
+
+.video ul li .img img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  object-fit: cover;
+  -moz-transition: all .5s;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  -ms-transition: all .5s;
+  transition: all .5s;
+}
+
+.video ul li h3 {
+  font-size: 20px;
+  font-weight: 600;
+  color: #fff;
+  text-align: center;
+  margin: 0 0 10px;
+}
+
+.video ul li p {
+  font-size: 16px;
+  line-height: 26px;
+  height: 52px;
+  color: #fff;
+  text-align: center;
+  margin: 0 0 10px;
+  padding: 0 15px;
+  overflow: hidden;
+}
+
+.video ul li i {
+  font-size: 18px;
+  font-style: normal;
+  color: #fff;
+  font-weight: 600;
+  position: relative;
+}
+
+.videoInpage {
+  padding: 40px 80px;
+}
+
+.videoInpage ul li h3,
+.videoInpage ul li p,
+.videoInpage ul li i {
+  color: #000;
+}
+
+.shopDisney ul li {
+  float: left;
+  padding: 10px;
+  width: 50%;
+}
+
+.shopDisney ul li a {
+  width: 100%;
+}
+
+.shopDisney ul li .shop-box-top {
+  position: relative;
+  width: 100%;
+  padding-top: calc(50% - 10px);
+  margin-bottom: 10px;
+}
+
+.shopDisney ul li .shop-box-bottom {
+  position: relative;
+  width: 100%;
+  padding-top: calc(50% - 10px);
+  margin-top: 20px;
+}
+
+.shopDisney ul li .sb-left {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: calc(50% - 10px);
+  height: 100%;
+  background: #ccc;
+}
+
+.shopDisney ul li .sb-left img {
+  width: 100%;
+  height: 100%;
+}
+
+.shopDisney ul li .sb-right {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: calc(50% - 10px);
+  height: 100%;
+  background: #ccc;
+}
+
+.loginBox {
+  border-radius: 12px;
+  margin: 100px auto;
+  width: 1000px;
+  box-shadow: 0 0 10px #9abaf3;
+}
+
+.loginBox .img {
+  width: 500px;
+  float: left;
+}
+
+.loginBox .img img {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+}
+
+.loginBox .cont {
+  float: left;
+  background-color: #fff;
+  text-align: center;
+  width: 500px;
+  padding-bottom: 16px;
+}
+
+.loginBox .cont .title {
+  text-align: center;
+  font-size: 36px;
+  margin-bottom: 16px;
+  padding-top: 16px;
+}
+
+.loginBox .cont input {
+  border: 1px solid #d1d3e2;
+  background-color: #fff;
+  display: block;
+  font-size: 16px;
+  height: 42px;
+  border-radius: 40px;
+  margin: 20px auto;
+  width: 420px;
+  padding: 0 15px;
+  outline: 0;
+}
+
+.loginBox .cont button {
+  width: 452px;
+  height: 44px;
+  background-color: #2277ba;
+  color: #fff;
+  border-radius: 40px;
+  font-size: 16px;
+  outline: 0;
+  border: 0;
+}
+
+
+table {
+  text-align: center;
+  border-collapse: collapse;
+}
+
+table,
+table tr th,
+table tr td {
+  border: 1px solid #a8aeb2;
+  padding: 5px 10px;
+}
+
+.touxiang {
+  width: 160px;
+}
+
+.person {
+  margin-top: 30px;
+}
+
+.person caption {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.person table {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.shop {
+  padding: 40px 80px;
+}
+
+.shop ul li {
+  float: left;
+  width: 20%;
+  padding: 10px;
+}
+
+.shop ul li a {
+  display: block;
+  width: 100%;
+  border: 1px solid #ddd;
+}
+
+.shop ul li a:hover {
+  border-color: #ed020e;
+}
+
+.shop ul li a:hover p {
+  color: #000;
+}
+
+.shop ul li a img {
+  width: 100%;
+  height: 250px;
+}
+
+.shop ul li a .txt {
+  padding: 10px;
+}
+
+.shop ul li a .price {
+  font-weight: bold;
+  color: #ed020e;
+  margin-bottom: 5px;
+}
+
+.shop ul li a p {
+  color: #666;
+  line-height: 20px;
+  height: 40px;
+  overflow: hidden;
+}
+
+.info {
+  padding: 40px 80px;
+}
+
+.info ul li {
+  height: 150px;
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 20px;
+}
+
+.info ul li .img {
+  width: 200px;
+  float: left;
+  margin-right: 15px;
+}
+
+.info ul li .img img {
+  width: 100%;
+  height: 130px;
+}
+
+.info ul li .txt {
+  float: left;
+}
+
+.info ul li .txt .tag {
+  color: #666;
+}
+
+.info ul li .txt .tit {
+  margin: 15px 0;
+  font-size: 20px;
+}
+
+.info ul li .txt .time {
+  font-size: 14px;
+  color: #999;
+}
+
+.footer {
+  text-align: center;
+  background: #fff;
+  padding: 40px 20px;
+}
+
+.footer .foot-logo img {
+  height: 40px;
+}
+
+.footer .foot-menu {
+  margin: 15px 0;
+}
+
+.footer .foot-menu ul li {
+  display: inline-block;
+  padding: 0 20px;
+}
+
+.footer .foot-wx img {
+  display: block;
+  margin: 0 auto 5px;
+  width: 120px;
+  height: 120px;
+  border: 1px solid #ddd;
+}
+
+.footer .foot-wx p {
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.5);
+  margin-top: 10px;
+}
+
+.footer .statment {
+  padding-top: 20px;
+}
+
+.footer .statment p,
+.footer .statment a {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.5);
+  line-height: 1.5;
+}
+.button {
+  width: 100%;
+  height: 40px;
+  border: 0;
+  border-radius: 16px;
+  box-shadow: inset 1px 1px 1px 0px rgb(230 244 255 / 80%), inset -1px -1px 1px 0px rgb(40 48 85 / 30%), 1px 1px 3px 0px rgb(40 50 85 / 10%);
+  user-select: none;
+  color: #283155;
+  text-shadow: 2px 1px 1px rgb(0 0 0 / 10%);
+  opacity: 2 !important;
+  cursor: pointer;
+  background-image: linear-gradient(135deg, #F4F5F6, #fff);
+  font-size: 16px;
+       }
  
-.clearfix::after {  
-    content: "";  
-    display: table;  
-    clear: both;  
-}  
-h3, h4 {
-    text-align: center;
-    color: #333;
-}
+ 
+ 
+ 
+       .operator {
+           background-image: linear-gradient(133deg, #D9DCE8, #E2E4EF);
+           width: 100%;
+           height: 40px;
+           border: 0;
+           border-radius: 16px;
+           box-shadow: inset 1px 1px 1px 0px rgb(230 244 255 / 80%), inset -1px -1px 1px 0px rgb(40 48 85 / 30%), 1px 1px 3px 0px rgb(40 50 85 / 10%);
+           user-select: none;
+           color: #283155;
+           text-shadow: 2px 1px 1px rgb(0 0 0 / 10%);
+           opacity: 2 !important;
+           cursor: pointer;
+           background-image: linear-gradient(135deg, #F4F5F6, #fff);
+       }
+       .add {
+           height: 90px;
+       }
+       .del-button {
+           background-image: linear-gradient(133deg, #FFA80E, #FFC355);
+           color: #fff;
+           width: 100%;
+           height: 40px;
+           border: 0;
+           border-radius: 16px;
+           box-shadow: inset 1px 1px 1px 0px rgb(230 244 255 / 80%), inset -1px -1px 1px 0px rgb(40 48 85 / 30%), 1px 1px 3px 0px rgb(40 50 85 / 10%);
+           user-select: none;
+           color: #283155;
+           text-shadow: 2px 1px 1px rgb(0 0 0 / 10%);
+           opacity: 2 !important;
+           cursor: pointer;
+          
+           font-size: 16px;
+       }
+ 
+       .equal-button {
+           box-shadow: inset 1px 1px 1px 0px rgb(223 255 255 / 21%), inset -2px -2px 1px 0px rgb(40 49 85 / 30%), 1px 1px 3px 0px rgb(157 174 167 / 20%);
+           background: #4f6ef2;
+           color: #fff;
+           width: 100%;
+           height: 40px;
+           border: 0;
+           border-radius: 16px;
+           box-shadow: inset 1px 1px 1px 0px rgb(230 244 255 / 80%), inset -1px -1px 1px 0px rgb(40 48 85 / 30%), 1px 1px 3px 0px rgb(40 50 85 / 10%);
+           user-select: none;
+           color: #283155;
+           text-shadow: 2px 1px 1px rgb(0 0 0 / 10%);
+           opacity: 2 !important;
+           cursor: pointer;
+           
+           font-size: 16px;
+       }
+       .result {
+           padding-left: 10px;
+           height: 56px;
+           font-size: 20px;
+           border: 0;
+           border-radius: 18px;
+           background: #fff;
+           box-shadow: inset -1px -1px 1px 0 rgb(223 255 257 / 70%);
+           box-shadow: inset 1px 1px 1px 0 rgb(40 49 86 / 30%);
+           overflow: hidden;
+       }  
+       .products {  
+        display: flex;  
+        flex-wrap: wrap; /* If the number of products exceeds four, they will be displayed in a new lines */  
+        justify-content: space-between; /* Uniformly distributed items, but the spacing between the first and last items and the edge of the container may not be uniform */    
+      }  
+        
+      .product {  
+        flex: 0 0 20%;   
+        margin: 20px;   
+        text-align: center;  
+        box-sizing: border-box;
+        height: 240px;  
+        border: 1px solid #ccc;   
+        padding: 10px;  
+      }
+      .cart {  
+        background-color: #6bf359;  
+        padding: 20px;  
+        border-radius: 5px;  
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);  
+        max-width: 600px;  
+        margin: 0 auto;  
+    }  
+ 
+    .cart h3 {  
+        text-align: center;  
+        margin-bottom: 20px;  
+    }  
 
-.products {  
-    display: flex;  
-    justify-content: space-around;   
-    flex-wrap: wrap;  
-    padding: 10px;  
-}  
-  
-.product, .cart-item {  
-    display: flex;  
-    flex-direction: column;   
-    align-items: center;   
-    padding: 10px;  
-    margin: 10px;   
-    border: 1px solid #ddd;   
-    border-radius: 4px;   
-    background-color: #fafafa;
-    width: 200px; 
-    box-sizing: border-box;
-} 
+    #cart-items {  
+         
+        margin-bottom: 20px;  
+    }  
 
-  
+    .total {  
+        display: flex;  
+        justify-content: space-between;  
+        align-items: center;  
+        margin-bottom: 20px;  
+        font-weight: bold;  
+    }  
 
-.product p {  
-    
-    overflow-y: auto;  
-    padding: 10px; 
-    margin: 0;
-    height: 100%; 
-}  
-  
+    .cart button {  
+        padding: 10px 20px;  
+        border: none;  
+        border-radius: 5px;  
+        font-size: 16px;  
+        cursor: pointer;  
+    }  
 
-.product p::-webkit-scrollbar {  
-    width: 10px;  
-}  
-  
-.product p::-webkit-scrollbar-track {  
-    background: #f1f1f1;   
-}  
-   
-.product p::-webkit-scrollbar-thumb {  
-    background: #888;   
-}  
-  
-.product p::-webkit-scrollbar-thumb:hover {  
-    background: #555;   
-}
-.quantity-controls {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-}
+    #checkout {  
+        background-color: #4CAF50; /* 绿色 */  
+        color: white;  
+    }  
 
-.quantity-controls button {
-    padding: 5px 10px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
+    #clear-cart {  
+        background-color: #f44336; /* 红色 */  
+        color: white;  
+    }  
 
-.quantity-controls button:hover {
-    background-color: #0056b3;
-}
-
-.quantity-controls .quantity {
-    margin: 0 10px;
-    font-size: 1.2em;
-}
-
-.total {
-    text-align: right;
-    font-size: 1.2em;
-    margin-top: 20px;
-    color: #333;
-}
-
-button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: #28a745;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    margin-top: 10px;
-}
-
-button:hover {
-    background-color: #218838;
-}
-
-button#clear-cart {
-    background-color: #dc3545;
-}
-
-button#clear-cart:hover {
-    background-color: #c82333;
-}
+    /* 额外的鼠标悬停效果 */  
+    .cart button:hover {  
+        opacity: 0.8;  
+    }  
